# disco-ii-picocore-mx8mp-yocto

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  build-wrapper.sh  disco-yocto.def  docker-compose.yml  fs-release-manifest.xml  run-apptainer.sh  setup-yocto  yocto-build.slurm
custom/: start.sh
custom/conf/: bblayers.conf  local.conf
custom/layers/meta-disco-camera/recipes/camera/: camera.bb
custom/layers/meta-disco-camera/recipes/libcsp/: libcsp.bb
custom/layers/meta-disco-pipeline/: README.md
custom/layers/meta-disco-pipeline/recipes/libcsp/: libcsp.bb
custom/layers/meta-disco-pipeline/recipes/module_dependencies/: brotli.bb  highway.bb  libjxl.bb
custom/layers/meta-disco-scheduler/: disco-app-sys-manager.bb  disco-scheduler.bb
custom/layers/meta-disco-scheduler/conf/: layer.conf
custom/layers/meta-disco-scheduler/files/: a53-app-sys-manager.service
custom/layers/meta-disco-scheduler/files/app-sys-manager/: build_cross.sh  main.c  meson.build  orig-main.c
custom/layers/meta-disco-scheduler/files/app-sys-manager/lib/param/: meson.build
custom/layers/meta-disco-upload/conf/: layer.conf
custom/layers/meta-fus/: .gitignore
custom/layers/meta-fus/classes/: image_types_fus.bbclass
custom/layers/meta-fus/conf/: layer.conf
custom/layers/meta-fus/tools/: fus-setup-release.sh  yocto-f+s-utilities
custom/layers/meta-fus/wic/: fus-fsimx7ulp-legacy.wks.in  fus-no-uboot-bootpart.wks.in  fus-uboot-bootpart.wks.in
custom/layers/meta-si/conf/: layer.conf
custom/patch/: meta-disco-camera-opencv.bb
(+54 files in other folders)
